@@ -1403,14 +1403,16 @@ fdo_call (qdaemon, qstat, qdialer, pfcalled, pterr)
 		   (unsigned int) (FEATURE_SIZES
 				   | FEATURE_EXEC
 				   | FEATURE_RESTART
-				   | FEATURE_QUOTES));
+				   | FEATURE_QUOTES
+				   | FEATURE_ICOMPL));
 	else
 	  sprintf (zsend, "S%s -p%c -vgrade=%c -R -N0%o",
 		   qdaemon->zlocalname, bgrade, bgrade,
 		   (unsigned int) (FEATURE_SIZES
 				   | FEATURE_EXEC
 				   | FEATURE_RESTART
-				   | FEATURE_QUOTES));
+				   | FEATURE_QUOTES
+				   | FEATURE_ICOMPL));
       }
     else
       {
@@ -1424,14 +1426,16 @@ fdo_call (qdaemon, qstat, qdialer, pfcalled, pterr)
 		   (unsigned int) (FEATURE_SIZES
 				   | FEATURE_EXEC
 				   | FEATURE_RESTART
-				   | FEATURE_QUOTES));
+				   | FEATURE_QUOTES
+				   | FEATURE_ICOMPL));
 	else
 	  sprintf (zsend, "S%s -Q%ld -p%c -vgrade=%c -R -N0%o",
 		   qdaemon->zlocalname, iseq, bgrade, bgrade,
 		   (unsigned int) (FEATURE_SIZES
 				   | FEATURE_EXEC
 				   | FEATURE_RESTART
-				   | FEATURE_QUOTES));
+				   | FEATURE_QUOTES
+				   | FEATURE_ICOMPL));
       }
 
     fret = fsend_uucp_cmd (qconn, zsend);
@@ -2427,7 +2431,8 @@ faccept_call (puuconf, zconfig, fuuxqt, zlogin, qconn, pzsystem)
 		 (unsigned int) (FEATURE_SIZES
 				 | FEATURE_EXEC
 				 | FEATURE_RESTART
-				 | FEATURE_QUOTES));
+				 | FEATURE_QUOTES
+				 | FEATURE_ICOMPL));
 	zreply = ab;
       }
     if (! fsend_uucp_cmd (qconn, zreply))
